# GrazeMate

./: index.html  styles.html  tabs.html  test.html  vertical_bar.html
GrazeMateSite/SkyWrangler/: index.html
GrazeMateSite/SkyWrangler/css/: styles.css  vertical_bar.css
GrazeMateSite/SkyWrangler/js/: main.js  vertical_bar.js
MSDK/Backend/: server.py
MSDK/Mobile-SDK-Android-V5-dev-sdk-main/: README.md  README_CN.md
MSDK/Mobile-SDK-Android-V5-dev-sdk-main/SampleCode-V5/android-sdk-v5-as/: build.gradle  gradle.properties
MSDK/Mobile-SDK-Android-V5-dev-sdk-main/SampleCode-V5/android-sdk-v5-sample/: build.gradle
Simulation/: Multi_Cluster_Boids.py  astar.py  cattle.py  definitions.py  localisation.py  mst.py  wrangler.py
css/: styles.css
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cow_drone_sim/share/my_cow_drone_sim/: package.sh  package.xml  package.zsh
install/my_cow_drone_sim/share/my_cow_drone_sim/launch/: cow_drone_sim.launch.py
install/my_cow_drone_sim/share/my_cow_drone_sim/worlds/: cow_drone_world.sdf
js/: main.js
log/: latest_build
new_sim_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
new_sim_ws/log/: latest_build
new_sim_ws/src/my_cow_drone_sim/: setup.cfg  setup.py
new_sim_ws/src/my_cow_drone_sim/launch/: cow_drone_sim.launch.py
php/: sendmail.php
ultralytics/SUPModels/cow_detect/: README.dataset.txt  README.roboflow.txt  data.yaml
ultralytics/SUPModels/cow_pose_estimation/: README.dataset.txt  README.roboflow.txt  data.yaml
(+2281 files in other folders)
